ADd address and lat and long to places
