# apps/api/src/Application/UseCases/Wine/CreateWine/CreateWineHandler.php
@@ -84,6 +84,7 @@ final readonly class CreateWineHandler
                 address: $purchase->place->address,
                 city: $purchase->place->city,
                 country: $purchase->place->country,
+                mapData: $purchase->place->mapData,
             );
 
             new WinePurchase(
