# apps/api/src/Application/UseCases/Wine/UpdateWine/UpdateWineHandler.php
@@ -125,6 +125,7 @@ final readonly class UpdateWineHandler
                     address: $purchase->place->address,
                     city: $purchase->place->city,
                     country: $purchase->place->country,
+                    mapData: $purchase->place->mapData,
                 );
 
                 new WinePurchase(
